--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#a9ceec" />
 
-  <title>Freeze荒らしツール</title>
+  <title>みんなのすみか荒らしツール</title>
   <meta name="description" content="" />
 
   <link rel="icon" href="https://i.ibb.co/39dXLvV3/Freeze-logo.png" />
 
   <!-- Open Graph -->
   <meta property="og:type"        content="website" />
-  <meta property="og:site_name"   content="Freeze" />
+  <meta property="og:site_name"   content="みんなのすみか" />
   <meta property="og:title"       content="荒らしツール" />
   <meta property="og:description" content="★シンプルで高品質★" />
   <meta property="og:url"         content="" />
@@ -909,3 +909,4 @@
     </script>
   </body>
 </html>
+
