--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>みんなのすみか荒らしツール</title>
   <meta name="description" content="" />
 
-  <link rel="icon" href="https://i.ibb.co/39dXLvV3/Freeze-logo.png" />
+  <link rel="icon" href="https://i.ibb.co/rfskMLvc/IMG-0991.jpg" />
 
   <!-- Open Graph -->
   <meta property="og:type"        content="website" />
@@ -909,4 +909,5 @@
     </script>
   </body>
 </html>
+
 
